<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jwhh.jim.notekeeper.activity.NoteActivity"
    tools:showIn="@layout/activity_note">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:foregroundGravity="center"
        android:max="3"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/spinner_courses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_note_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/note_title"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="@+id/spinner_courses"
        app:layout_constraintRight_toRightOf="@+id/spinner_courses"
        app:layout_constraintTop_toBottomOf="@+id/spinner_courses" />

    <EditText
        android:id="@+id/text_note_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/note_text"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="@+id/text_note_title"
        app:layout_constraintRight_toRightOf="@+id/text_note_title"
        app:layout_constraintTop_toBottomOf="@+id/text_note_title" />

    <Button
        android:id="@+id/btn_attach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/open_camera"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/text_note_text"
        app:layout_constraintRight_toRightOf="@id/text_note_text"
        app:layout_constraintTop_toBottomOf="@id/text_note_text" />

    <ImageView
        android:id="@+id/img_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/content_desc"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/btn_attach"
        app:layout_constraintRight_toRightOf="@id/btn_attach"
        app:layout_constraintTop_toBottomOf="@id/btn_attach" />
</android.support.constraint.ConstraintLayout>
